syntax = "proto3";

package greet.v1;

option go_package = "go.orx.me/echosrv/gen/greet/v1;greetv1";
import "google/api/annotations.proto";

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string greeting = 1;
}

message HealthRequest{}

message HealthResponse{}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {
    option (google.api.http) = {
            post: "/greet"
            body: "*"
          };
  }

  rpc Health(HealthRequest) returns (HealthResponse) {
    option (google.api.http) = {
          get: "/health",
    };
  }
}